objects/nitro__Nitro_Configuration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Nitro configuration data.</description>
    <fields>
        <fullName>nitro__API_Key__c</fullName>
        <description>Your Nitro API Key</description>
        <label>Nitro API Key</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__API_Secret__c</fullName>
        <description>Your Nitro API Secret Key</description>
        <label>Nitro API Secret</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__Account_Trigger__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable the Default Nitro Account Triggers</description>
        <inlineHelpText>Enable the Default Nitro Account Triggers</inlineHelpText>
        <label>Account Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nitro__Admin_Name__c</fullName>
        <defaultValue>&quot;admin&quot;</defaultValue>
        <description>Your Nitro Administrator Name</description>
        <inlineHelpText>Enter the NItro Admin name provided by your sales representative.</inlineHelpText>
        <label>Nitro Admin Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__Admin_Password__c</fullName>
        <description>Your Nitro Admin Password</description>
        <inlineHelpText>Enter the Nitro Admin Password that was provided by your sales representative.</inlineHelpText>
        <label>Nitro Admin Password</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__Administrator_Email__c</fullName>
        <description>Nitro Administrator email - enter to get notified via email automatically when (a) someone purchases a reward (b) someone completes a challenge that you&apos;ve set a callback on</description>
        <inlineHelpText>Enter your email address here to get notified via email automatically when (a) someone purchases a reward (b) someone completes a challenge that you&apos;ve set a callback on.</inlineHelpText>
        <label>Notification Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>nitro__Auto_Create_Team_On_User_Field__c</fullName>
        <label>Auto Create Team On User Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__Auto_Create_Team__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Create Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nitro__Auto_Create_Team_on_User_Field_Type__c</fullName>
        <label>Auto Create Team on User Field Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__Auto_post_to_Chatter__c</fullName>
        <defaultValue>&quot;Non-Repeatable&quot;</defaultValue>
        <description>What gets added to a user&apos;s Chatter feed? (a) NON-REPEATABLE: Only non-repeatable challenges (b) EVERYTHING: Any time the user earns points (c) NOTHING: Nothing gets added to Chatter.</description>
        <inlineHelpText>What gets added to a user&apos;s Chatter feed? (a) NON-REPEATABLE: Only non-repeatable challenges (b) EVERYTHING: Any time the user earns points (c) NOTHING: Nothing gets added to Chatter.</inlineHelpText>
        <label>Auto-post to Chatter</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__Cache_Duration__c</fullName>
        <defaultValue>5</defaultValue>
        <description>Length of time to cache data from Nitro</description>
        <inlineHelpText>Enter a number of minutes to cache Nitro data.   Enter 0 to turn it off.</inlineHelpText>
        <label>Cache Duration</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nitro__Callback_Email__c</fullName>
        <description>An email address to receive Challenge callback details from. This should be a Salesforce generated email address that will receive the email and parse the contained XML.</description>
        <inlineHelpText>An email address to receive Challenge callback details from. This should be a Salesforce generated email address that will receive the email and parse the contained XML.</inlineHelpText>
        <label>Salesforce Email Service</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>nitro__Chatter_Section_Title__c</fullName>
        <label>Chatter Section Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__Chatter_Trigger__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable the Default Nitro Chatter Triggers</description>
        <inlineHelpText>Enable the Default Nitro Chatter Triggers</inlineHelpText>
        <label>Chatter Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nitro__Current_Leaders_Title__c</fullName>
        <label>Current Leaders Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__Current_Leaders_for_Team_Title__c</fullName>
        <label>Current Leaders for Team Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__Current_Team_Challenges_Title__c</fullName>
        <label>Current Team Challenges Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__Current_User_Trophies_Title__c</fullName>
        <label>Current User Trophies Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__EA_Account_Trigger__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable EA Account Trigger.</description>
        <inlineHelpText>Enable EA Account Trigger.</inlineHelpText>
        <label>EA Account Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nitro__EA_Case_Trigger__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable EA Case Trigger.</description>
        <inlineHelpText>Enable EA Case Trigger.</inlineHelpText>
        <label>EA Case Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nitro__EA_Contact_Trigger__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable EA Contact Trigger.</description>
        <inlineHelpText>Enable EA Contact Trigger.</inlineHelpText>
        <label>EA Contact Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nitro__EA_Event_Trigger__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable EA Event Trigger.</description>
        <inlineHelpText>Enable EA Event Trigger.</inlineHelpText>
        <label>EA Event Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nitro__EA_Lead_Trigger__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable EA Lead Trigger.</description>
        <inlineHelpText>Enable EA Lead Trigger.</inlineHelpText>
        <label>EA Lead Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nitro__EA_Opportunity_Trigger__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable EA Opportunity Trigger.</description>
        <inlineHelpText>Enable EA Opportunity Trigger.</inlineHelpText>
        <label>EA Opportunity Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nitro__EA_Task_Trigger__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable EA Task Trigger.</description>
        <inlineHelpText>Enable EA Task Trigger.</inlineHelpText>
        <label>EA Task Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nitro__EnableLeaderboardFilter__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Leaderboards can integrate this setting to turn off and on filter by a default action tag.</description>
        <inlineHelpText>Leaderboards can integrate this setting to turn off and on filter by a default action tag.</inlineHelpText>
        <label>Enable Leaderboard Filter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nitro__Enable_WYSIWYG_Editor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable WYSIWYG Editor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nitro__Featured_Challenges_Title__c</fullName>
        <label>Featured Challenges Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__Featured_Reward__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show the Featured Reward in the sidebar.</description>
        <inlineHelpText>Show the Featured Reward in the sidebar.</inlineHelpText>
        <label>Featured Reward in Sidebar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nitro__Fiscal_Year_Start_Month__c</fullName>
        <defaultValue>&quot;January&quot;</defaultValue>
        <description>The Month that your Fiscal Year starts.</description>
        <inlineHelpText>The Month that your Fiscal Year starts.</inlineHelpText>
        <label>Fiscal Year Start Month</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__Home_Tab__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Show the Nitro Home tab.</description>
        <inlineHelpText>Show the Nitro Home tab.</inlineHelpText>
        <label>Home Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nitro__Latest_News_Title__c</fullName>
        <label>Latest News Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__Lead_Trigger__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable the Default Nitro Lead Triggers</description>
        <inlineHelpText>Enable the Default Nitro Lead Triggers</inlineHelpText>
        <label>Lead Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nitro__Leaderboards_Tab__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Show the Nitro Leaderboards tab.</description>
        <inlineHelpText>Show the Nitro Leaderboards tab.</inlineHelpText>
        <label>Leaderboards Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nitro__Nitro_User_ID_Field__c</fullName>
        <defaultValue>&quot;User Name&quot;</defaultValue>
        <description>The Salesforce field to use as the Nitro User ID. Choices: &quot;User Id&quot; (the internal SFDC user id), &quot;User Name&quot; (the email address used to login with, ie. &quot;riley@me.com&quot;), and &quot;Short User Name&quot; (just the part of the username before the @ sign, ie &quot;riley&quot;). DO NOT CHANGE ONCE SELECTED.</description>
        <inlineHelpText>The Salesforce field to use as the Nitro User ID. Choices: &quot;User Id&quot; (the internal SFDC user id), &quot;User Name&quot; (the email address used to login with, ie. &quot;riley@me.com&quot;), and &quot;Short User Name&quot; (just the part of the username before the @ sign, ie &quot;riley&quot;).</inlineHelpText>
        <label>Nitro User ID Field</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__Notification_Duration__c</fullName>
        <defaultValue>30</defaultValue>
        <description>Notification Duration</description>
        <inlineHelpText>Notification Duration</inlineHelpText>
        <label>Notification Duration</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nitro__Opportunity_Quota_Trigger__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable the Default Nitro Opportunity Quota Triggers</description>
        <inlineHelpText>Enable the Default Nitro Opportunity Quota Triggers</inlineHelpText>
        <label>Opportunity Quota Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nitro__Opportunity_Trigger__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable the Default Nitro Opportunity Triggers</description>
        <inlineHelpText>Enable the Default Nitro Opportunity Triggers</inlineHelpText>
        <label>Opportunity Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nitro__Points_Name_long__c</fullName>
        <defaultValue>&quot;Points&quot;</defaultValue>
        <description>The long name of your Points. For example, Dollars, Credits, Points, Benioffs.</description>
        <inlineHelpText>The long name of your Points. For example, Dollars, Credits, Points, Benioffs.</inlineHelpText>
        <label>Points Name (long)</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__Points_Name_short__c</fullName>
        <defaultValue>&quot;Pts&quot;</defaultValue>
        <description>The abbreviated version of your Point Category name. For example: $, Pts, Crs, Bffs</description>
        <inlineHelpText>The abbreviated version of your Point Category name. For example: $, Pts, Crs, Bffs</inlineHelpText>
        <label>Points Name (short)</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__Profile_Tab__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Show the Nitro Profile tab.</description>
        <inlineHelpText>Show the Nitro Profile tab.</inlineHelpText>
        <label>Profile Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nitro__Recently_Earned_Trophies_Title__c</fullName>
        <label>Recently Earned Trophies Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__Reward_Store_Title__c</fullName>
        <label>Reward Store Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__Salesforce_Instance__c</fullName>
        <label>Salesforce_Instance</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__Schedule_Action_API_Calls__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, will call the API via a scheduled job instead of the Future method</description>
        <label>Schedule Action API Calls</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nitro__ServiceBarEnableFullLeadboard__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether to Enable Full Leadboard in ServiceBar</description>
        <inlineHelpText>Whether to Enable Full Leadboard in ServiceBar.</inlineHelpText>
        <label>ServiceBar Enable Full Leadboard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nitro__ServiceBarNotificationAutoClose__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether to automatically close notifications in ServiceBar</description>
        <inlineHelpText>Whether to automatically close notifications in ServiceBar.</inlineHelpText>
        <label>ServiceBar Auto Close Notifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nitro__ServiceBarNotificationDuration__c</fullName>
        <defaultValue>10</defaultValue>
        <description>ServiceBar Notification Duration</description>
        <inlineHelpText>ServiceBar Notification Duration</inlineHelpText>
        <label>ServiceBar Notification Duration</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nitro__ServiceBarShowChallenges__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether to Show Challenges in ServiceBar</description>
        <inlineHelpText>Whether to Show Challenges in ServiceBar.</inlineHelpText>
        <label>ServiceBar Show Challenges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nitro__ServiceBarShowFeaturedChallenges__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether to Show FeaturedChallenges in ServiceBar</description>
        <inlineHelpText>Whether to Show FeaturedChallenges in ServiceBar.</inlineHelpText>
        <label>ServiceBar Show Featured Challenges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nitro__ServiceBarShowLeaderboard__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether to Show Leaderboard in ServiceBar</description>
        <inlineHelpText>Whether to Show Leaderboard in ServiceBar.</inlineHelpText>
        <label>ServiceBar Show Leaderboard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nitro__ServiceBarShowLevel__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether to Show Level in ServiceBar</description>
        <inlineHelpText>Whether to Show Level in ServiceBar.</inlineHelpText>
        <label>ServiceBar Show Level</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nitro__ServiceBarShowNews__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether to Show News in ServiceBar</description>
        <inlineHelpText>Whether to Show News in ServiceBar.</inlineHelpText>
        <label>ServiceBar Show News</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nitro__ServiceBarShowTeams__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether to Show Teams in ServiceBar</description>
        <inlineHelpText>Whether to Show Teams in ServiceBar.</inlineHelpText>
        <label>ServiceBar Show Teams</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nitro__ServicebarLeaderboardDuration__c</fullName>
        <label>Servicebar Leaderboard Duration</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__ServicebarPointName__c</fullName>
        <defaultValue>&apos;Points&apos;</defaultValue>
        <label>Servicebar Point Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__Show_Biggest_Deals_Pane__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Biggest Deals Pane</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nitro__Show_Dollars_Leaders_Pane__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Dollars Leaders Pane</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nitro__Show_Featured_Challenge__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Featured Challenge in Sidebar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nitro__Show_Home_Facebook__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Home Facebook</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nitro__Show_Home_LinkedIn__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Home LinkedIn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nitro__Show_Home_Twitter__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Home Twitter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nitro__Show_Points_Leaders_Pane__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Points Leaders Pane</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nitro__Show_Quota_Leaders_Pane__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Show/Hide the User&apos;s Quota Stats in the Nitro for Salesforce Sidebar.</description>
        <label>Show Quota Leaders Pane</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nitro__Show_Quota_Leaders__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Quota in Sidebar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nitro__Show_Redemption__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Rewards Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nitro__Show_Spread_the_Word__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Show the Spread the Word module on the Nitro Home page.</description>
        <inlineHelpText>Show the Spread the Word module on the Nitro Home page.</inlineHelpText>
        <label>Show Spread the Word</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nitro__Show_Teams__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Teams in Sidebar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nitro__Show_User_Preference__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Select User Data Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nitro__Spread_The_Word_Title__c</fullName>
        <label>Spread The Word Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__Subdomain__c</fullName>
        <defaultValue>&quot;sfdc&quot;</defaultValue>
        <externalId>true</externalId>
        <label>Subdomain</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__Support_Web_Widgets__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable Web Widget</description>
        <inlineHelpText>Enable Web Widget</inlineHelpText>
        <label>Support Nitro Web Widgets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nitro__Task_Trigger__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable the Default Nitro Task Triggers</description>
        <inlineHelpText>Enable the Default Nitro Task Triggers</inlineHelpText>
        <label>Task Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nitro__Team_Members_Title__c</fullName>
        <label>Team Members Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__Team_Standings_Tab__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Show the Nitro Team Standings tab.</description>
        <inlineHelpText>Show the Nitro Team Standings tab.</inlineHelpText>
        <label>Team Standings Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nitro__Teams_Tab__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Show the Nitro Teams tab.</description>
        <inlineHelpText>Show the Nitro Teams tab.</inlineHelpText>
        <label>Teams Tab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nitro__Time__c</fullName>
        <defaultValue>&quot;Quarter&quot;</defaultValue>
        <description>Supported values are: Week, Month, Quarter, AllTime</description>
        <inlineHelpText>Supported values are: Week, Month, Quarter, AllTime</inlineHelpText>
        <label>Time Frame</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__Top_Point_Earner_Title__c</fullName>
        <label>Top Point Earner Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__User_Locale__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nitro__User_Preference_Types2__c</fullName>
        <label>User Preference Types2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__User_Preference_Types__c</fullName>
        <label>User Preference Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__User_Preferences2__c</fullName>
        <label>User Preferences2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__User_Preferences__c</fullName>
        <label>User Preferences</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__User_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable the Default Nitro User Triggers</description>
        <inlineHelpText>Enable the Default Nitro User Triggers</inlineHelpText>
        <label>Trigger on User Object</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nitro__Vendor_Endpoint_URL__c</fullName>
        <label>Vendor Endpoint URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__Vendor__c</fullName>
        <defaultValue>&quot;Manual Fulfillment&quot;</defaultValue>
        <label>Vendor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__Whats_Happening_Now_Home_Title__c</fullName>
        <label>Whats Happening Now Home Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__Whats_Happening_Now_Reward_Title__c</fullName>
        <label>Whats Happening Now Reward Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__Whats_Happening_Now_TS_Title__c</fullName>
        <label>Whats Happening Now TS Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Nitro Configuration</label>
</CustomObject>